# Data515_SmartSkincare

./: .gitignore  LICENSE.txt  PROJECT_SUMMARY.md  README copy.md  README.md  Untitled-1.ipynb  app.js  index.html  pyproject.toml  recommend_mvp.py  recommendation.html  requirements-dev.txt  requirements.txt  skintest.html  styles.css
.github/workflows/: ci.yml
Datasets/: cosmetics_image_urls.json  filled_latin_v2.csv  missing_ingredients_for_curation.csv  needs_human.csv  product_data.csv  recommendations.csv  sephora_image_urls.json
Examples/: README.md
Examples/example_images/: README.md
cache/: incidecoder_cache.json  ingredient_6types.json  ingredient_aliases.json  ingredient_info_incidecoder.json  ingredient_skin_map.json  product_knn_topk.json  pubchem_compound_info_cache.json  pubchem_synonyms_cache.json  review_stats.json  sephora_image_urls.json
data/: ingredient_info_combined.csv  manual_curation.csv  needs_human_filtered.csv  needs_human_filtered_v2.csv  recommendations.csv  top1000_unmatched_for_curation.csv  withSearch_filled_remaining.csv  withSearch_filled_v2.csv
docs/: Component Specification.md  Moon.ipynb  TECHNOLOGY_REVIEW.md  Won_stroy.ipynb  Wonjoon_hwang  functional_specification.md
docs/docs/: functional_specification.md
docs/technology_review/: TECHNOLOGY_REVIEW.md  demo_image_fetch.py
scripts/: apply_curation_rules_v2.py  build_ingredient_skin_map.py  build_review_stats_cache.py  build_vector_cache.py  categorize_products.py  count_missing_images.py  dashboard.py  export_top_unmatched_for_curation.py  fetch_product_images_byHand.py  fill_curation_rules.py  fill_manual_curation.py  fill_missing_ingredient_data.py  fill_needs_human_withSearch.py  fill_remaining_not_in_map.py  filter_needs_human.py  ingredient_canonical.py  match_pipeline.py  recommend_mvp.py  skin_type_engine.py
smart_skincare/cache/: incidecoder_cache.json  ingredient_6types.json  ingredient_info_incidecoder.json  product_knn_topk.json  pubchem_compound_info_cache.json  pubchem_synonyms_cache.json  review_stats.json
smart_skincare/scripts/: build_review_stats_cache.py  fill_curation_rules.py  (+7 more)
src/: Moon.ipynb
static/: app.js
templates/: index.html  recommendation.html  skintest.html
(+41 files in other folders)
